<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Healthsome</string>
    <string name="hello_world">Something</string>
    <string name="title">HealthSome</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">Log In</string>
    <string name="subtitle">A Health Data Platform</string>
    <string name="sign_in">SIGN IN</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up!</string>

    <color name="invalid">#FF0000</color>
    <color name="background">#2BAF2B</color>
    <color name="text_color">#FFFFFF</color>

    <string name="title_activity_sign_up">Sign Up</string>
    <string name="cancel">CANCEL</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_main">Healthsome</string>
    <string name="title_activity_studies_fragment">All Studies</string>
    <string name="title_activity_mystudies_fragment">My Studies</string>
    <string name="title_activity_profile_fragment">Profile</string>
    <string name="title_activity_setting_fragment">Setting</string>
    <string name="title_activity_study1_content">Seasonal Affective Disorder Research</string>
    <string name="study_description">Six percent of the US population, primarily in northern climates, is affected by seasonal affective disorder (SAD) in its most marked form. Another 14 percent of the adult US population suffers from a lesser form of seasonal mood changes, known as winter blues. Of course, seasonality affects people all over the world. The prevalence of SAD in Oslo, Norway, was reported as 14 percent in contrast to 4.7 percent in New York City. In fact, someone may have winter blues while living in southern climates and convert to full blown SAD if he or she moves to a northern climate. The results of this study would help researchers determine what actions individuals could take to prevent SAD.</string>
    <string name="title_activity_survey">Survey</string>


</resources>
