<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mdt.healthsome.SignUp" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/title"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/subtitle"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColorHint="#BBBBBB"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#BBBBBB"
        android:textSize="12sp" />
   
    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/password"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#BBBBBB"
        android:textSize="12sp" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/sign_up"
        android:layout_alignBottom="@+id/sign_up"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:background="#B6D98F"
        android:padding="5dp"
        android:radius="10dp"
        android:text="@string/cancel"
        android:textColor="#344F15"
        android:textSize="12sp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="88dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:background="#B6D98F"
        android:padding="5dp"
        android:radius="10dp"
        android:text="@string/signup"
        android:textColor="#344F15"
        android:textSize="12sp" />

</RelativeLayout>
